fix: overlap between download button and y-axis labels

--- a/src/app/dashboard/plot/plot.component.scss
+++ b/src/app/dashboard/plot/plot.component.scss
@@ -1,3 +1,7 @@
 .z-500 {
   z-index: 500;
 }
+
+.download-button:not(:hover){
+  background-color: white;
+}
